fixed brick out of boundary in a more economical way

--- a/games/tetris/_css/style.css
+++ b/games/tetris/_css/style.css
@@ -1,6 +1,7 @@
 html, body, main {
 	box-sizing: border-box;
 	background: url(../_images/background.jpg) no-repeat;
+	background-size: 100% 100%;
 	background-color: black;
 	color: white;
 	width: 100%;
